# SlackPulse

./: .gitignore  README.md  com.slackpulse.agent.plist  install.sh  pyproject.toml  uninstall.sh
slackpulse/: __init__.py  __main__.py  config.py
slackpulse/core/: __init__.py  monitor.py  notification.py
slackpulse/detectors/: __init__.py  base.py  database.py  distributed.py  filesystem.py  hybrid.py
slackpulse/filters/: __init__.py  bot.py  deduplication.py
slackpulse/sms/: __init__.py  sender.py
slackpulse/tts/: __init__.py  speaker.py
slackpulse/utils/: __init__.py  logging.py  signals.py
